themes/SuiteP/css/style.css
/* ... */
@media (min-width: 601px) {
    .modulename {
        line-height: 90px;
    }

    .navbar-toggle {
        height: 90px;
    }

    #mobile_menu {
        top: 90px;
        left: 10px;
        -webkit-overflow-scrolling: touch;
    }

    #search #query_string {
        left: -185px;
        padding-top: 12px;
        padding: 12px;
        margin-top: 0px;
    }

    #quickcreatetop {
        margin-top: 25px;
    }

    #quickcreatetop a {
        padding: 13px 32px 13px 12px;
        background-position: 80px 2px;
    }

    #quickcreatetop a:hover {
        background-position: 80px -56px;
    }

    #quickcreatetop ul.dropdown-menu {
        left: 0px;
    }

    #usermenucollapsed, #usermenucollapsed-mobile {
        background-color: transparent;
        height: 42px;
        width: 42px;
        background-image: none, url("../../../../index.php?entryPoint=getImage&themeName=SuiteP&imageName=p_user_icon.svg"), url("../../../../index.php?entryPoint=getImage&themeName=SuiteP&imageName=p_user_icon.png");
        background-repeat: no-repeat;
        background-position: 0 0;
        border: none;
        margin-left: 0px;
    }

    #usermenucollapsed, #usermenucollapsed-mobile:hover {
        background-position: 0 -100px;
    }

    #desktop_notifications {
        float: left;
        width: 44px;
        height: 48px;
        margin-top: 22px;
        margin-right: 15px;
        background-image: none, url("../../../../themes/SuiteP/images/p_icon_alert.svg"), url("../../../../themes/SuiteP/images/p_icon_alert.png");
        background-repeat: no-repeat;
        background-position: 0px 0px;
    }

    #desktop_notifications:hover {
        background-position: 0px -100px;
    }

    #searchbutton {
        margin: 25px 15px 0 0;
        background-color: transparent;
        border: none;
        background-image: none, url("../../../../themes/SuiteP/images/p_search_button.svg"), url("../../../../themes/SuiteP/images/p_search_button.png");
        background-repeat: no-repeat;
        background-position: 0px -44px;
        text-indent: -9999px;
        overflow: hidden;
        padding: 12px 0px 12px 0px;
        width: 26px;
    }

    #search.open #searchbutton {
        background-position: 0px -44px;
        background-color: transparent;
    }

    #searchbutton:hover {
        background-position: 0px 10px;
        background-color: transparent;
    }

    #wizform #wizard {
        width: 500px;
    }
}

@media (min-width: 1131px) {
    #mobile_menu {
        position: absolute;
        overflow-y: scroll;
        overflow-x: hidden !important;
        float: left;
        width: 200px !important;
        margin: 0;
        padding: 0;
        background: #5d5670 !important;
        border-bottom-left-radius: 3px;
        border-bottom-right-radius: 3px;

    }

    #mobile_menu li {
        display: none;
    }

    #wizform #wizard {
        width: 1200px;
    }
}
@media (max-width: 1130px) {

    #usermenu {
        display: none;
    }

    .navbar-inverse .navbar-brand {
        display: none;
    }

    #mobileheader {
        display: block;
    }



    @media (max-width: 320px) {
        .modulename {
            visibility: visible;
            font-size: 14px;
            letter-spacing: 2px;
            text-transform: uppercase;
            text-align: left !important;
            margin: 0 auto 0 15px !important;
        }

    }

    @media (min-width: 321px) {
        .modulename {
            visibility: visible;
            font-size: 14px;
            letter-spacing: 2px;
            text-transform: uppercase;
            text-align: left !important;
            margin: 0 auto 0 30px !important;
            width: 84%;

        }

        #wizform #wizard {
            width: 300px;
        }

    }

    #mobile_menu {
        position: absolute;
        overflow-y: scroll;
        overflow-x: hidden !important;
        float: left;
        width: 300px !important;
        margin: 0;
        padding: 0;
        background: #5d5670 !important;
        border-bottom-left-radius: 3px;
        border-bottom-right-radius: 3px;

    }

    #mobile_menu li {
        list-style: none;
        height: 50px;
        margin: 0;
        border-bottom: 1px solid #757083;
        line-height: 50px;
    }

    #mobile_menu a {
        color: #ffffff;
        display: block;
        padding: 0px 15px;
        font-size: 14px;
    }

    #mobile_menu a:hover {
        color: #f08377;
        -webkit-transition: all 0.3s ease-out;
        -moz-transition: all 0.3s ease-out;
        -o-transition: all 0.3s ease-out;
        transition: all 0.3s ease-out;
    }

    .navbar-header {
        float: none;
    }


    #globalLinks {
        display: inline-block !important;
    }

    #quickcreatetop {
        display: inline-block !important;
    }

    #search {
        display: inline-block !important;
    }

    #desktop_notifications {
        display: inline-block !important;
    }

    div#bs-example-navbar-collapse-1 {
        display: block;
        margin-top: -90px;
        height: 48px;
    }
}

@media (max-width: 600px) {
    nav.navbar .container-fluid {
        padding-left: 0;
        padding-right: 0;
    }

    nav.navbar .container-fluid .navbar-header {
        padding-left: 20px;
        padding-right: 20px;
        height: 60px;
    }

    div#bs-example-navbar-collapse-1 {
        margin-top: 0px;
        width: 100%;
        background-color: #a2b2bf;
        padding: 0 20px 0 0;
    }

    .navbar {
        min-height: 60px;
    }

    .navbar-inverse {
        max-height: 60px !important;
    }

    .modulename {
        height: 60px;
        width: 100%;
        line-height: 60px !important;
    }

    #quickcreatetop {
        margin-top: 10px;
    }
}
/* ... */

